--- a/themes/zezen/source/css/_variables.sass
+++ b/themes/zezen/source/css/_variables.sass
@@ -51,3 +51,6 @@ $container-width: $large
 
 // Grid
 $gutter: .5rem
+
+// Pop
+$pop-overflow: 2rem
